--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "engines" : {
+    "npm": "8.15.0",
+    "node" : "16.17.0"
   }
 }
